# Human-driven-navigation-strategies-in-a-ROS2-environment

./: .gitignore  LICENSE  README.md  README_fixed.md  README_github.md  doc2.html  docs1.html  docs3.html  docs4.html  docs5  drs_key  drs_key.pub  frames_2025-01-14_13.47.27.gv  frames_2025-01-14_13.48.24.gv  package.xml  setup.cfg  setup.py  systembashrc
config/: collision_monitor_params.yaml  map_merge_params.yaml  merge_map.rviz  nav2_multirobot_params_1.yaml  nav2_multirobot_params_2.yaml  nav2_multirobot_params_all.yaml  nav2_multirobot_params_all_copy.yaml  slam_online_async.yaml  slam_toolbox_config.yaml  waffle.yaml
disaster_response_swarm/: graph_construction_node.py  initial_pose_publisher.py  merge_map_node.py  navigation_utils.py  spawn_robot_server.py
docs/: advanced_features.md  architecture.md  bashrc.example  contributing.md  demo_gui.md  demo_launcher.md  demo_step_by_step_mission.md  index.md  installation.md  launch_files.md  mission_contract_v1.md  planner_seam_demo.md  showcase_current_system.md  troubleshooting.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: fully_integrated_swarm.launch.py  gazebo_launch.py  hlds_laser.launch.py  localization_navigation_launch.py  minimal_gazebo.launch.py  minimal_rtabmap.launch.py  minimal_rviz.launch.py  nav2_launch.py  navigation_launch.py  real_robot_with_realsense_launch.py  single_robot_no_namespacing.launch.py  single_robot_with_namespacing.launch.py  slam_waffle_launch.py  slam_with_sim_camera.launch.py  spawn_robot_launch.py  spawn_turtlebot3.launch.py  (+5 more)
src/multi_robot_mission_stack_interfaces/: CMakeLists.txt  package.xml
src/multi_robot_mission_stack_interfaces/srv/: NavigateToPose.srv  ProduceSemanticBlockedPassageV35.srv  QueryAdvisoryNamedNavV39.srv
(+391 files in other folders)
