<?xml version="1.0"?>
<package format="2">
  <name>disaster_response_swarm</name>
  <version>0.0.1</version>
  <description>Disaster response swarm coordination using ROS2</description>
  <maintainer email="smohadde@uci.edu">Seyed A. Mohaddesi</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>merge_map</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>rtabmap_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>